documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32VB.BAS

Public Declare Function PC708_MonConfig Lib "P71W32.DLL" Alias "_PC708_MonConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MonConfigEx Lib "P71W32.DLL" Alias "_PC708_MonConfigEx@16" (ByVal configval As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_MonConfigExx Lib "P71W32.DLL" Alias "_PC708_MonConfigExx@20" (ByVal configval As Long, ByVal seqaddr As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_MonIsRunning Lib "P71W32.DLL" Alias "_PC708_MonIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_MonRd Lib "P71W32.DLL" Alias "_PC708_MonRd@8" (ByRef buf As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_MonRdEx Lib "P71W32.DLL" Alias "_PC708_MonRdEx@12" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_MonResume Lib "P71W32.DLL" Alias "_PC708_MonResume@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_MonStart Lib "P71W32.DLL" Alias "_PC708_MonStart@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_MonStatus Lib "P71W32.DLL" Alias "_PC708_MonStatus@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_MonStop Lib "P71W32.DLL" Alias "_PC708_MonStop@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_MsgBlockRd Lib "P71W32.DLL" Alias "_PC708_MsgBlockRd@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgBlockWr Lib "P71W32.DLL" Alias "_PC708_MsgBlockWr@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgCheck Lib "P71W32.DLL" Alias "_PC708_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgCommRd Lib "P71W32.DLL" Alias "_PC708_MsgCommRd@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgCommWr Lib "P71W32.DLL" Alias "_PC708_MsgCommWr@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgConfig Lib "P71W32.DLL" Alias "_PC708_MsgConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgConfigEx Lib "P71W32.DLL" Alias "_PC708_MsgConfigEx@12" (ByVal configval As Long, ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgCWD1Rd Lib "P71W32.DLL" Alias "_PC708_MsgCWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgCWD1Wr Lib "P71W32.DLL" Alias "_PC708_MsgCWD1Wr@12" (ByVal cwd1 As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgCWD2Rd Lib "P71W32.DLL" Alias "_PC708_MsgCWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgCWD2Wr Lib "P71W32.DLL" Alias "_PC708_MsgCWD2Wr@12" (ByVal cwd2 As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgDataRd Lib "P71W32.DLL" Alias "_PC708_MsgDataRd@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgDataWr Lib "P71W32.DLL" Alias "_PC708_MsgDataWr@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgErrorRd Lib "P71W32.DLL" Alias "_PC708_MsgErrorRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgErrorWr Lib "P71W32.DLL" Alias "_PC708_MsgErrorWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgFieldRd Lib "P71W32.DLL" Alias "_PC708_MsgFieldRd@12" (ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgFieldWr Lib "P71W32.DLL" Alias "_PC708_MsgFieldWr@16" (ByVal fieldval As Long, ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgFlagRd Lib "P71W32.DLL" Alias "_PC708_MsgFlagRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgFlagWr Lib "P71W32.DLL" Alias "_PC708_MsgFlagWr@12" (ByVal msgflag As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgIsAccessed Lib "P71W32.DLL" Alias "_PC708_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgOptRd Lib "P71W32.DLL" Alias "_PC708_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgOptWr Lib "P71W32.DLL" Alias "_PC708_MsgOptWr@12" (ByVal msgopt As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgReset Lib "P71W32.DLL" Alias "_PC708_MsgReset@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_MsgSWD1Rd Lib "P71W32.DLL" Alias "_PC708_MsgSWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_MsgSWD2Rd Lib "P71W32.DLL" Alias "_PC708_MsgSWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_Mul Lib "P71W32.DLL" Alias "_PC708_Mul@8" (ByVal mula As Long, ByVal mulb As Long) As Long
Public Declare Function PC708_PortRd Lib "P71W32.DLL" Alias "_PC708_PortRd@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_PortWr Lib "P71W32.DLL" Alias "_PC708_PortWr@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_ProgRdW Lib "P71W32.DLL" Alias "_PC708_ProgRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_ProgWrW Lib "P71W32.DLL" Alias "_PC708_ProgWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMFill Lib "P71W32.DLL" Alias "_PC708_RAMFill@16" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMRdB Lib "P71W32.DLL" Alias "_PC708_RAMRdB@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_RAMRdL Lib "P71W32.DLL" Alias "_PC708_RAMRdL@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMRdsW Lib "P71W32.DLL" Alias "_PC708_RAMRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMRdsxW Lib "P71W32.DLL" Alias "_PC708_RAMRdsxW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMRdW Lib "P71W32.DLL" Alias "_PC708_RAMRdW@8" (ByVal addrval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_RAMWipe Lib "P71W32.DLL" Alias "_PC708_RAMWipe@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_RAMWipeEx Lib "P71W32.DLL" Alias "_PC708_RAMWipeEx@8" (ByVal value As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMWrB Lib "P71W32.DLL" Alias "_PC708_RAMWrB@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMWrL Lib "P71W32.DLL" Alias "_PC708_RAMWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMWrsW Lib "P71W32.DLL" Alias "_PC708_RAMWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMWrsxW Lib "P71W32.DLL" Alias "_PC708_RAMWrsxW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RAMWrW Lib "P71W32.DLL" Alias "_PC708_RAMWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RcvAlloc Lib "P71W32.DLL" Alias "_PC708_RcvAlloc@8" (ByVal framenum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RcvConfigExx Lib "P71W32.DLL" Alias "_PC708_RcvConfigExx@28" (ByVal rtconfigval As Long, ByVal intfreq As Integer, ByVal monconfigval As Long, ByVal intconfigval As Long, ByVal inttotal As Integer, ByVal msgconfigval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RcvCountRd Lib "P71W32.DLL" Alias "_PC708_RcvCountRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_RcvCountWr Lib "P71W32.DLL" Alias "_PC708_RcvCountWr@8" (ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RcvDataCountRd Lib "P71W32.DLL" Alias "_PC708_RcvDataCountRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_RcvDataCountWr Lib "P71W32.DLL" Alias "_PC708_RcvDataCountWr@8" (ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RcvIndex Lib "P71W32.DLL" Alias "_PC708_RcvIndex@8" (ByVal framenum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RTConfig Lib "P71W32.DLL" Alias "_PC708_RTConfig@16" (ByVal configval As Long, ByVal taval As Long, ByVal intfreq As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RTConfigEx Lib "P71W32.DLL" Alias "_PC708_RTConfigEx@16" (ByVal configval As Long, ByVal taval As Long, ByVal intfreq As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_RTConfigExx Lib "P71W32.DLL" Alias "_PC708_RTConfigExx@12" (ByVal configval As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RTConfigMsg Lib "P71W32.DLL" Alias "_PC708_RTConfigMsg@12" (ByVal configval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RTReset Lib "P71W32.DLL" Alias "_PC708_RTReset@8" (ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_RTStatus Lib "P71W32.DLL" Alias "_PC708_RTStatus@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_RTSWDRd Lib "P71W32.DLL" Alias "_PC708_RTSWDRd@8" (ByVal taval As Long, ByVal handleval As Long) As Integer
Public Declare Function PC708_RTSWDWr Lib "P71W32.DLL" Alias "_PC708_RTSWDWr@12" (ByVal swdval As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_SARRdW Lib "P71W32.DLL" Alias "_PC708_SARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_SARWrW Lib "P71W32.DLL" Alias "_PC708_SARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_SchedBuild Lib "P71W32.DLL" Alias "_PC708_SchedBuild@16" (ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef freq As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_SchedBuildEx Lib "P71W32.DLL" Alias "_PC708_SchedBuildEx@28" (ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef freq As Integer, ByRef period As Integer, ByRef buf As Long, ByVal bufsize As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_SchedBuildExx Lib "P71W32.DLL" Alias "_PC708_SchedBuildExx@28" (ByVal frametime As Long, ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef period As Integer, ByRef buf As Long, ByVal bufsize As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_SchedCalc Lib "P71W32.DLL" Alias "_PC708_SchedCalc@8" (ByRef msgaddr As Long, ByVal handleval As Long) As Long
